--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tensorflow>=2.16.0
-streamlit>=1.29.0
-pillow>=10.1.0
-numpy>=1.26.3
-opencv-python-headless>=4.9.0
+tensorflow==2.16.1
+streamlit==1.29.0
+pillow==10.1.0
+numpy==1.26.3
+opencv-python-headless==4.9.0.80
